# AssignementRos

./: .gitignore  CMakeLists.txt  README.md
include/: Header.h  Image.h  ImageLogReader.h  ImageLogger.h
src/: Image.cpp  test_IMAGE.cpp
